--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         function() {
             $Lightning.createComponent(
                 "c:WebForm",
-                { flowName: "Dummy"},                  
+                { flowName: "WebFormSignUp"},                  
                 "lightningLocator",   
                 function(cmp) {}
             );
