--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script src="https://sandbox-web-forms-whyte.cs95.force.com/lightning/lightning.out.js"></script>
+<script src="https://whyte--demo01.sandbox.my.salesforce-sites.com/webforms/lightning/lightning.out.js"></script>
 
 <div id="lightningLocator"></div>
 
@@ -12,6 +12,6 @@
                 function(cmp) {}
             );
         },
-        'https://sandbox-web-forms-whyte.cs95.force.com'  //Site endpoint
+        'https://whyte--demo01.sandbox.my.salesforce-sites.com/webforms'  //Site endpoint
     );
 </script>
